--- a/app/assets/stylesheets/parties.scss
+++ b/app/assets/stylesheets/parties.scss
@@ -45,6 +45,7 @@ $color-4: #f6f6f6;
         display:inline-block;
         height:40px;
         font-size:30px;
+        line-height:30px;
         width:calc(60% - 140px);
         vertical-align: middle;
         box-sizing: border-box;
